[package]
name = "ers"
version = "0.3.0"
edition = "2024"
description = "Window border renderer for tarmac"

[dependencies]
libc = "0.2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
objc2 = { version = "0.6", default-features = false }
objc2-foundation = { version = "0.3", default-features = false, features = [
    "NSGeometry",
    "NSString",
    "NSValue",
] }
objc2-app-kit = { version = "0.3", default-features = false, features = [
    "NSApplication",
    "NSResponder",
    "NSView",
    "NSWindow",
    "NSColor",
    "NSColorSpace",
    "NSGraphics",
    "NSScreen",
    "NSRunningApplication",
    "objc2-core-foundation",
] }
objc2-quartz-core = { version = "0.3", default-features = false, features = [
    "CALayer",
    "CAShapeLayer",
    "objc2-core-foundation",
] }
objc2-core-foundation = { version = "0.3", default-features = false, features = [
    "CFCGTypes",
] }
objc2-core-graphics = { version = "0.3", default-features = false, features = [
    "CGColor",
    "CGColorSpace",
    "CGPath",
] }
